--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
         <div class="container">
             <div class="header-nav">
-                <a href="index_main.html" class="logo" data-aos="fade-right">OSCAR</a>
+                <a href="index.html" class="logo" data-aos="fade-right">OSCAR</a>
                 <nav id="nav" class="nav">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="index_main.html" class="nav-link active">Главная</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link active">Главная</a></li>
                         <li class="nav-item"><a href="index_Rus.html" class="nav-link">Российские</a></li>
                         <li class="nav-item"><a href="index_Hollywood.html" class="nav-link">Зарубежные</a></li>
                         <li class="nav-item"><a href="index_film.html" class="nav-link">Фильмография</a></li>
