--- a/index_Hollywood.html
+++ b/index_Hollywood.html
@@ -19,7 +19,7 @@
                 <a href="index_main.html" class="logo" data-aos="fade-right">OSCAR</a>
                 <nav id="nav" class="nav">
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="index_main.html" class="nav-link">Главная</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Главная</a></li>
                         <li class="nav-item"><a href="index_Rus.html" class="nav-link">Российские</a></li>
                         <li class="nav-item"><a href="index_Hollywood.html" class="nav-link active">Зарубежные</a></li>
                         <li class="nav-item"><a href="index_film.html" class="nav-link">Фильмография</a></li>
