--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="header-row">
                 <div class="header-content" data-aos="fade-up">
-                    <h1> <p1 class="header-heading"> OSCAR </p1><br><p2 class="header-heading"> Легенды кинематографического искусства</p2></h1>
+                    <h1> <p1 class="header-heading"> OSCAR </p1><br><p2 class="header-heading"> Легенды кинематографа</p2></h1>
                     <p><br>Добро пожаловать на наш сайт! <br> На данном портале представлена информация как об отечественных актерах театра и кино, так и о зарубежных.</p>
                 </div>
                 <div class="header-img" data-aos="fade-left">
