--- a/index_film.html
+++ b/index_film.html
@@ -34,7 +34,7 @@
     </header>
     <section>
         <div class="container-title">
-            <h2>Фильмография</h2>
+            <h2>Фильмы</h2>
             <p>
                 В данном разделе представлена информация о фильмах, в которых участвовали многие из актеров нашей подборки.
             </p>
