--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OSCAR|Главная</title>
-    <link rel="icon" href="./img/favicon/favicon-32x32.png?" type="image/x-icon">
+    <link rel="icon" href="./img/favicon/favicon.ico?" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="./css/reser.css">
