--- a/index_Hollywood.html
+++ b/index_Hollywood.html
@@ -37,8 +37,7 @@
     <section>
         <div class="container-title">
             <h2>Зарубежные актеры</h2>
-            <p>В данном разделе содержится информация про персонажей анимации.
-                <br>Узнай новые подробности или вспомни их характер. 
+            <p>В данном разделе содержится информация о зарубежных актерах.
             </p>
         </div>
     </section>
